--- a/app/views/v2/guidance/get-started.html
+++ b/app/views/v2/guidance/get-started.html
@@ -16,37 +16,115 @@ Get started - Apprenticeship services - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started</h1>      
-    <h2 class="govuk-heading-l">About the recruitment and display adverts APIs</h2>
+    <h2 class="govuk-heading-l">About the Recruitment and Display adverts APIs</h2>
     <p class="govuk-body">
       <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a><br><br>
       <a href="recruitment-api-sandbox-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a><br><br>
       <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br><br>
-      RESTful APIs.<br><br>
-      Being RESTful, each record of information is assigned a globally unique URI, and the operations available on each resource are directly mapped to HTTP verbs. Data can be easily consumed by issuing simple GET requests on the required resource URI.<br><br>
-      Read the Companies House REST API overview for more information about our API approach, REST web services and the JSON data format.
+    </p>
+    <p class="govuk-body">
+      Apprenticeship Service APIs are RESTful. In a RESTful style of API, data resources are given unique URLs and are manipulated through standard HTTP verbs such as:
+    </p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li><code style="color:darkgreen;">GET</code> to request a resource</li>
+      <li><code style="color:darkgreen;">POST</code> to create a resource</li>
+      <li><code style="color:darkgreen;">PUT</code> to replace a resource</li>
+      <li><code style="color:darkgreen;">DELETE</code> to remove a resource</li>
+    </ul>
+    <p class="govuk-body">
+      All Apprenticeship Service APIs use the JSON data standard as the content type. JSON, or JavaScript Object Notation, is an open, standard format for storing and exchanging data. It can be used as a data format by any programming language, which makes it ideal for HTTP-based API services.
     </p>
     <h2 class="govuk-heading-l">API authentication</h2>
-      <p class=govuk-body">
-        Access to API services requires authentication. Recruitment API requires <a href="#" class="govuk-link govuk-link--no-visited-state">API authentication</a> credentials to be sent with each request, which is sent as an API key, stream key or OAuth access token.<br><br>
-        Learn <a href="#" class="govuk-link govuk-link--no-visited-state">how to create an application</a> as well as API keys, stream keys and OAuth web clients.
-    </p>
-    <h2 class="govuk-heading-l">Using our APIs if you are working for an employer or training provider</h2>
     <p class="govuk-body">
-      You will need the employer or provider to subscribe to the APIs and give you a key.<br><br>
-      They will be able to do this for the recruitment and display adverts APIs.<br><br>
-      They will also be able to send you a link to the documentation.<br><br>
-      If you would like to view the documentation and API you <a href="#" class="govuk-link govuk-link--no-visited-state">access it here</a>. You will have reduced functionality until the provider or employer subscribes and gives you a key.
+      Apprenticeship Service APIs require authentication credentials to be sent with each request. Credentials are sent in the form of an API key which is contained within a custom HTTP request header.
+    </p>
+    <p class="govuk-body">
+      The custom request header must be named <i>Ocp-Apim-Subscription-Key</i> and you must use your API key as the value for this custom request header in each API request.<br><br>
+      For example:
+    </p>
+    <code>
+      GET https://api.apprenticeships.education.gov.uk/vacancies/{yourAction} HTTP/1.1<br>
+      Host: api.apprenticeships.education.gov.uk<br>
+      X-Version: 1<br>
+      Ocp-Apim-Subscription-Key:<br>
+    </code>   
+    <p class="govuk-body govuk-!-margin-top-6">
+      In the case of an authentication failure, the API request will return a HTTP 401 response with a message giving the reason for the authentication failure, either:
+    </p>
+    <ul class="govuk-list govuk-list--number">
+      <li>the <i>Ocp-Apim-Subscription-Key </i> header is missing</li>
+      <li>the subscription key given as the header value is invalid</li>
+    </ul>
+    <p class="govuk-body">
+      If you are accessing different APIs, they will have their own API key.
+    </p>
+    <p class="govuk-body">
+      The following sections provide information on how to obtain your API key(s).
+    </p>
+    <h2 class="govuk-heading-l">API Versioning</h2>
+    <p class="govuk-body">
+      All Apprenticeship Service APIs are versioned. This ensures API consumers receive a predictable response from an API, even when a newer version of an API is released.
+      <br><br>
+      The version of the API you require must be specified within a custom HTTP request header.  
+      <br><br>
+      The custom request header must be named <i>X-Version</i> and you must specify the version (as a whole number) as the value for this custom request header in each API request.
+    </p>
+    <p class="govuk-body">
+      For example:
+    </p>
+    <code>
+      GET https://api.apprenticeships.education.gov.uk/vacancies/{yourAction} HTTP/1.1<br>
+      Host: api.apprenticeships.education.gov.uk<br>
+      X-Version: 1<br>
+      Ocp-Apim-Subscription-Key:<br>
+    </code>
+    <p class="govuk-body govuk-!-margin-top-6">
+      In case of a version check failure, you will receive a HTTP 404 response with a message giving the reason for the failure, either:
+    </p>
+    <ul class="govuk-list govuk-list--number">
+      <li>the <i>X-Version </i> header is missing</li>
+      <li>the version specified does not exist</li>
+    </ul>
+    <p class="govuk-body">
+      The apprenticeship maintains the current version of an API, as well as the previous version for a limited period of time. X months after the release of a new version of an API, the previous version will be decommissioned, so you will need to update to the latest version within <span style="color:darkred;">X</span> months of the new one becoming available.
+    </p>
+    <h2 class="govuk-heading-l">Using our APIs if you are working with an employer or training provider</h2>
+    <p class="govuk-body">
+      You need the employer or provider to give you an API key. They can do this for the Recruitment API and the Display adverts API using their Apprenticeship service account.<br><br>
+      The API key the employer or training provider will send to you is linked to their account and provides additional functionality, so use that one. <br><br>
+      You can view the API documentation now, using the links at the top of the page. You can read the documentation but will not be able to call the API until the employer or provider gives you an API key.
     </p>
     <h2 class="govuk-heading-l">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">subscribe to the API</a> and get a key.<br><br>
-      You will then be able to use the display advert API.<br><br>
-      If you would like to view the documentation and API you <a href="#" class="govuk-link govuk-link--no-visited-state">access it here</a>.<br>
+      If you are not working with an employer or training provider, you can use the Display adverts API to show adverts from Find apprenticeship training on any website.<br><br>
+      You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.<br><br>
+      You can <a href="#" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
     </p>
-    <h2 class="govuk-heading-l">Developer guidelines</h2>
+    <h2 class="govuk-heading-l">API Rate Limiting</h2>
     <p class="govuk-body">
-      Read the <a href="#" class="govuk-link govuk-link--no-visited-state">developer guidelines</a> for information about security, API rate limits and enumerated types as you’re developing your application.
+      Rate limiting is applied to the Apprenticeship Service APIs to ensure a high quality service is delivered for all users.<br><br>
+      You can make up to <span style="color:red;">XXXX</span> requests within a <span style="color:red;">X</span>  minute period. If you exceed this limit, you will receive a <code style="color:darkgreen;">429 Too Many Requests</code> HTTP status code for each request made within the rest of the <span style="color:red;">X</span>  minute timeframe. At the end of the time period, your rate limit will reset back to <span style="color:red;">XXXX</span> requests.
     </p>    
+    <h2 class="govuk-heading-l">API Key Security</h2>
+    <p class="govuk-body">
+      It is important to keep your API keys secure. This will prevent them from being discovered, your account from being compromised and your rate-limit quota from being exceeded.
+    </p>
+    <h2 class="govuk-heading-l">Do not embed API keys in your code</h2>
+    <p class="govuk-body">
+      Storing subscription keys in your application code increases the risk that they will be discovered, particularly if any of your source code is made public or it can be viewed by people who should not have access to the API key. Instead, you should consider storing them inside environment variables or configuration.
+    </p>
+    <h2 class="govuk-heading-l">Do not store API keys in your source tree</h2>
+    <p class="govuk-body">
+      If you store API keys in files, for example, configuration or environment files, do not store them inside the application source tree. If all or part of the source is made public, the API key may be compromised.
+    </p>
+    <h2 class="govuk-heading-l">Regenerate your API keys</h2>
+    <p class="govuk-body">
+      Regenerate your API keys regularly, including with each application release, to reduce the chance that an API key will be discovered.
+    </p>
+    <h2 class="govuk-heading-l">Environments</h2>
+    <p class="govuk-body">
+      Apprenticeship Service APIs are hosted in our live environment where production data is made available. A sandbox environment is also provided for some APIs, which run the same API versions as live to allow software developers to test their integration with Apprenticeship Service APIs in a safe place.
+    </p>
   </div>
 </div>
 {% endblock %}
