--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -86,7 +86,7 @@
               <p class="govuk-body">
                 Recruit an apprentice is the official government service for posting and managing apprenticeship adverts. Candidates can view and apply for apprenticeships on <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
               </p>
-              <h2 class="govuk-heading-m">Employers</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9">Employers</h2>
               <p class="govuk-body">
                 Information for employers on how to create and manage apprenticeship adverts, along with guidance on using our recruitment APIs. 
                 <br><br>
@@ -113,7 +113,7 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/collections/disability-confident-campaign">Disability confident employer scheme</a>
                 </li>
               </ul>
-              <h2 class="govuk-heading-m">Providers</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9">Providers</h2>
               <p class="govuk-body">
                 Information for training providers on how to create and manage apprenticeship vacancies, along with guidance on using our recruitment APIs. 
               </p>
@@ -128,7 +128,7 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="providers-get-started">Get started with the recruitment APIs</a>
                 </li>
               </ul>
-              <h2 class="govuk-heading-m">Recruitment APIs</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9">Recruitment APIs</h2>
               <p class="govuk-body">
                 How to access the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API and API documentation</a> for users without an apprenticeship service account.
               </p> 
@@ -137,7 +137,7 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="get-started">Get started</a>
                 </li>
               </ul>                            
-              <h2 class="govuk-heading-m">Legacy tools</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9">Legacy tools</h2>
               <p class="govuk-body">
                 These legacy tools will no longer be available from March 2022 and our new recruitment APIs should be used instead.
               </p>
