--- a/app/views/v2/guidance/register.html
+++ b/app/views/v2/guidance/register.html
@@ -90,9 +90,9 @@ Create an account - Apprenticeship services - GOV.UK
 			<input type="hidden" value="" name="redirect">
 			<input type="hidden" value="true" name="registered">
 
-			<p class="govuk-body">
+			<!--<p class="govuk-body">
 				By continuing you accept the <a href="#" class="govuk-link govuk-link--no-visited-state">terms and conditions</a>.
-			</p>
+			</p>-->
 
 			{{ govukButton({
 				text: "Create account",
