--- a/app/assets/sass/components/_summary-card.scss
+++ b/app/assets/sass/components/_summary-card.scss
@@ -78,5 +78,6 @@
     background: govuk-colour("light-grey");
     padding:  govuk-spacing(3)  govuk-spacing(4) ;
     margin-bottom: govuk-spacing(0);
+    position: relative;
   }
 }
