--- a/app/views/v3/employer/api/api-hub.html
+++ b/app/views/v3/employer/api/api-hub.html
@@ -44,7 +44,7 @@ Key for API - Manage apprenticeships - GOV.UK
                 You'll need to send the API key and the API page to your developer. You can do this by copying the information below and pasting it into an email.<br><br>             
               </p>
               <div class="app-summary-card ">
-                <header class="app-summary-card--header">                  
+                <header class="app-summary-card--header" data-module="app-copy">
                     {% if data['apiName'] == "recruitment-api" %}
                       <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-documentation</code>
                     {% elseif data['apiName'] == "recruitment-api-sandbox" %}
