--- a/app/views/v3/guidance/forgotten-password-enter-email.html
+++ b/app/views/v3/guidance/forgotten-password-enter-email.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
 
-{% set currentPage = "login" %}
-
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
@@ -13,11 +11,8 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Sign in
-		</h1>
-		<p>
-			Sign in or <a href="register" class="govuk-link govuk-link--no-visited-state">create an account</a> to access APIs.
-		</p>
+			Enter your email address
+		</h1>		
 
 		<form method="post" >
 			{{ govukInput({
@@ -26,25 +21,13 @@
 					text: "Email address",
 					classes: "govuk-!-width-three-quarters"
 				},
+				hint:
+				{
+					text: "Enter your registered email address to get a password reset link."
+				},
 				id: "email",
 				name: "email",
 				type: "email",
-				classes: "govuk-!-width-three-quarters"
-			}) }}
-
-			{{ govukInput({
-				label:
-				{
-					text: "Password",
-					classes: "govuk-!-width-three-quarters"
-				},
-				hint:
-				{
-					text: ""
-				},
-				id: "password",
-				name: "password",
-				type: "password",
 				classes: "govuk-!-width-three-quarters"
 			}) }}
 
@@ -52,14 +35,14 @@
 			<input type="hidden" value="true" name="logged-in">
 
 			{{ govukButton({
-				text: "Sign in",
-				href: "api-list"
+				text: "Continue",
+				href: "forgotten-password-check-email"
 			}) }}
 		</form>
 
 
 		<ul class="govuk-list">
-			<li><a href="forgotten-password-enter-email" class="govuk-link govuk-link--no-visited-state">Forgotten your password?</a></li>
+			<li><a href="#" class="govuk-link govuk-link--no-visited-state">Forgotten your password?</a></li>
 		</ul>
 	</div>
 </div>
