--- a/app/views/v3/guidance/get-started-loggedin.html
+++ b/app/views/v3/guidance/get-started-loggedin.html
@@ -5,10 +5,15 @@ Get started - Apprenticeship services - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-{{ govukBackLink({
-  text: "Back",
-  href: "javascript: window.history.go(-1)"
-}) }}
+{{super()}}
+<div class="login-nav login-border">
+  <ul class="login-nav__list">
+    <!--<li class="login-nav__list-item" id="Nav-DisplayName">Prototype user</li>
+    <li class="login-nav__list-item"> | <a href="account" class="govuk-link login-nav__link govuk-link--no-visited-state profile" id="Link-ManageAccount">Manage account</a>|</li>-->
+    <li class="login-nav__list-item"><a href="login" class="govuk-link login-nav__link govuk-link--no-visited-state" id="Link-SignOut">Sign out</a></li>
+  </ul>
+</div>
+<hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">
 {% endblock %}
 
 {% block content %}
