--- a/app/views/v6/provider/create/preview-vacancy.html
+++ b/app/views/v6/provider/create/preview-vacancy.html
@@ -217,7 +217,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
           </h2>
         </div>
         <div class="govuk-grid-column-three-quarters">
-          <p>Please apply through the Civil Service Jobs website.</p>
+          <p class="govuk-!-margin-bottom-8">Please apply through the Civil Service Jobs website.</p>
           <p>This apprenticeship requires you to apply through the employer's website.</p>
           <p class="govuk-!-margin-bottom-1"><a id="external-employer-website" href="#">Apply now</a></p>
           <p class="govuk-body-s">Closing date: 31 Mar 2022</p>
