--- a/app/views/v10/employer/create/check-your-answers.html
+++ b/app/views/v10/employer/create/check-your-answers.html
@@ -371,6 +371,37 @@ Training provider
           </div>
         </dl>
 
+        <!-- section start -->
+<h2 class="govuk-heading-m">Application</h2>
+
+<dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Question 1
+      <br>
+      <br>
+      <br>
+      Question 2
+      <br>
+      <br>
+    </dt>
+    <dd class="govuk-summary-list__value">
+      [[show question or 'None' if they haven't enter one]]
+      <br>
+      <br>
+      [[show question or 'None' if they haven't enter one]]
+    </dd>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="#">
+        Change<span class="govuk-visually-hidden"> description</span>
+      </a>
+    </dd>
+  </div>   
+
+</dl>
+<!-- section end -->
+
         <h2 class="govuk-heading-m">Now submit your advert</h2>
 
         <p class="govuk-body">By submitting this advert you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
