--- a/app/views/v10/employer/create/task-list.html
+++ b/app/views/v10/employer/create/task-list.html
@@ -121,11 +121,6 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
               Summary of the apprenticeship
               {% endif %}
             </span>
-            <!--{% if data.commodities and ( data.commodities | length ) > 0  or data.stock_number or data.upload or data.variety or data.number_of_packages %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -138,16 +133,13 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
               Tasks and training details 
               {% endif %}
             </span>
-            <!--{% if data.commodities and ( data.commodities | length ) > 0  or data.stock_number or data.upload or data.variety or data.number_of_packages %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else %}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
         </ul>
       </li>
+<!-- end section 1 -->
 
+<!-- start section 2 -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">2.</span> Employment details
@@ -245,7 +237,9 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
      
         </ul>
       </li>
+<!-- end section 2 -->
 
+<!-- start section 3 -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">3.</span> Requirements and prospects
@@ -322,16 +316,13 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
               Other things to consider
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
         </ul>
       </li>
+<!-- end section 3 -->
 
+<!-- start section 4 -->
       <li>
         <h2 class="app-task-list__section">
           <span class="app-task-list__section-number">4.</span> About the employer
@@ -345,10 +336,6 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
         </h2>
  
         <ul class="app-task-list__items">
-          <!--<li class="app-task-list__item" style="border-top:none;">
-            Content explaining that the user needs to add employer information
-          </li>-->
-
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section3 == "completed" %}
@@ -359,11 +346,6 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
               Name of employer on advert 
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -376,11 +358,6 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
               Employer Information
               {%endif%}
             </span>
-            <!--{% if data.port_entry or data.port_export or data.transport_method %}
-            <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
-            {% else%}
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
-            {% endif %}-->
           </li>
 
           <li class="app-task-list__item">
@@ -419,12 +396,44 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
 
         </ul>
       </li>
+<!-- end section 4 -->
 
+<!-- section 5 START -->
+<li>
+  <h2 class="app-task-list__section">
+    <span class="app-task-list__section-number">5.</span> Application
+    <span style="margin-left:310px;">
+      {% if data.section5 == "completed" %}
+      <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
+      {%else%}
+      <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
+      {%endif%}
+    </span>
+  </h2>
+
+  <ul class="app-task-list__items">
+    <li class="app-task-list__item">
+      <span class="app-task-list__task-name">
+        {% if data.section4 == "completed" %}
+        <a href="extra-questions?return_url=task-list" aria-describedby="list-convictions-status">
+          Questions for applicants
+        </a>
+        {%else%}
+        Questions for applicants
+        {%endif%}
+      </span>
+    </li>
+
+  </ul>
+</li>
+<!-- section 5 END -->
+
+<!-- start section 6 -->
       <li>
         <h2 class="app-task-list__section">
-          <span class="app-task-list__section-number">5.</span> Check and submit your advert
+          <span class="app-task-list__section-number">6.</span> Check and submit your advert
           <span style="margin-left:120px;">
-            {% if data.section4 == "completed" %}
+            {% if data.section5 == "completed" %}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
             {%else%}
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="list-convictions-status">Not started</strong>
@@ -437,7 +446,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
             <span class="task-list-submit-enabled">
               <span class="app-task-list__task-name">
                   <!--<a href="vacancy-preview" aria-describedby="list-convictions-status">-->
-                {% if data.section4 == "completed" %}
+                {% if data.section5 == "completed" %}
                 <a href="check-your-answers" aria-describedby="list-convictions-status">
                   Check your answers and submit your advert
                 </a>
@@ -449,6 +458,7 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
           </li>
         </ul>
       </li>
+<!-- end section 6 -->
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
