--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy.html
@@ -167,7 +167,7 @@ Manage vacancy
         <div class="search-input search-input-with-button">
           <label class="govuk-label" for="query">
             <!--Client reference-->
-            Search by applicant name
+            Search by applicant
           </label>
 
           <div class="autocomplete__parent_wrapper">
