--- a/app/views/v10/provider/view-vacancy/0-dashboard.html
+++ b/app/views/v10/provider/view-vacancy/0-dashboard.html
@@ -73,7 +73,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">8</span>
-              <a class="card-link" href="#">
+              <a class="card-link" href="1a-draft">
                 Draft vacancies
               </a>
             </h3>
