--- a/app/views/v10/provider/view-vacancy/1a-draft-deleted.html
+++ b/app/views/v10/provider/view-vacancy/1a-draft-deleted.html
@@ -190,7 +190,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>2 live vacancies</b> &nbsp;
+  <p class="govuk-body"><b>8 draft vacancies</b> &nbsp;
     <a href="#">Show all vacancies</a>
   </p>
 
