--- a/app/views/v10/provider/view-vacancy/1a-draft.html
+++ b/app/views/v10/provider/view-vacancy/1a-draft.html
@@ -190,7 +190,7 @@ Vacancies
   </thead>
   <tbody class="govuk-table__body">
           <tr class="govuk-table__row govuk-body-s">
-            <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
+            <td class="govuk-table__cell">Safety, Health & Environment Technician Apprentice</td>
               <td class="govuk-table__cell">FENDI LTD</td>
               <td class="govuk-table__cell"> - </td>
               <td class="govuk-table__cell">01 Jun 2022</td>             
