--- a/app/views/v10/traineeships/create/delete.html
+++ b/app/views/v10/traineeships/create/delete.html
@@ -14,15 +14,14 @@ Manage apprentices
 
 {% block content %}
 
-<form method="post">
 <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
 
-       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Customer Relations Trainee</h1>
+       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Safety, Health & Environment Technician Apprentice</h1>
 
        <h1 class="govuk-heading-l">Are you sure you want to delete this vacancy?</h1>
-       <form action="/accounts/KK6WKG/vacancies/7943056c-1de8-4f78-959d-518b8fd59221/delete/" method="post">
-           <div class="govuk-form-group">
+       <form method="post" action="../view-vacancy/1a-draft-deleted">
+        <div class="govuk-form-group">
                <fieldset class="govuk-fieldset">
                    <span class="govuk-error-message field-validation-valid" id="error-message-ConfirmDeletion" data-valmsg-for="ConfirmDeletion" data-valmsg-replace="true"></span>
                    <div class="govuk-radios">
