--- a/app/views/v11/traineeships/create/employers-select-search.html
+++ b/app/views/v11/traineeships/create/employers-select-search.html
@@ -15,7 +15,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
     
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which employer do you want to create a vacancy for?</h1>
 
-    <form method="post" action="employers-select-0">
+    <form method="post" action="employers-select-search">
 
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
@@ -44,7 +44,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
                 <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
               </div>
             </div>
-            <input class="govuk-text" name="searchOrgQuery" id="tt-default" value="test">
+            <input class="govuk-text" name="searchOrgQuery" id="tt-default" value="ABC opticians">
           </div>
           <div class="search-submit">
             <button class="govuk-button" data-module="govuk-button" type="submit" id="tt-default" name="searchOrgsSubmit" value="Search Organisations">Search employers</button>
@@ -52,13 +52,28 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
         </div>
       </fieldset>
       
-
       <p class="govuk-body"><a href="employers-select">Clear search</a></p>
 
-      <p class="govuk-body govuk-!-margin-bottom-6">0 employers match <b>'test'</b></p>
-
-         
-    </form>
+       <!-- TABLE RESULTS -->
+       <table class="govuk-table govuk-!-margin-bottom-8" id="order-table-one">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Employer</th>
+          <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Account name</th>
+          <th scope="col" class="govuk-table__header">Agreement ID</th>
+          <th scope="col" class="govuk-table__header"></th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+          <td class="govuk-table__cell">ABC opticians</td>
+          <td class="govuk-table__cell">ABC opticians </td>
+          <td class="govuk-table__cell">X4JKRY</td>
+          <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+          </tr>
+        </tr>
+      </tbody>
+      </table>		
 
   </div>
 </div>
