--- a/app/views/v11/_summary.html
+++ b/app/views/v11/_summary.html
@@ -12,11 +12,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     {{ govukDetails({
-      summaryText: "Sprint goals",
+      summaryText: "Sprint design work",
       html: "<table class='govuk-table'>                    
         <thead class='govuk-table__head'>
           <tr class='govuk-table__row'>
-            <th scope='col' class='govuk-table__header'>What we're doing</th>
+            <th scope='col' class='govuk-table__header'>What we've done</th>
             <th scope='col' class='govuk-table__header'>Why we're doing it</th>
           </tr>
         </thead>
@@ -24,6 +24,10 @@
           <tr class='govuk-table__row'>
             <td class='govuk-table__cell'>Allowing providers to share applications with employers within the service</td>
             <td class='govuk-table__cell'>RAA improvements</td>
+          </tr>
+          <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'>Allow users to delete API keys</td>
+            <td class='govuk-table__cell'>RAA MVS+ work</td>
           </tr>
         </tbody>
       </table>"
